--- a/pages/uxui/caffeine92.html
+++ b/pages/uxui/caffeine92.html
@@ -12,9 +12,6 @@
     
 <style>
 
-.caffeine92_wrapper{
-    height:45em;
-}
 #select_1 a{
     color: rgb(179, 118, 5);
     border-bottom: 2px solid rgb(179, 118, 5);
@@ -45,6 +42,7 @@
         <li id="select_5"><a href="caffeine92/aboutus.html">About Us</a></li>
     </ul>
 </nav>
+<div class="content_wrapper">
     <div id="left_content">
         <h1>Caffeine within seconds.</h1>
         <h3 id="h3_top">The fastest, best quality coffee in your hands.</h3>
@@ -60,6 +58,7 @@
     </div><!--right content ENDS-->
 
 </div><!--caffein92_wrapper ENDS-->
+</div><!--content_wrapper ENDS-->
 <footer>
     <ul class="float_l footer_nav">
         <li><a href="url">Contact Us</a></li>
