--- a/pages/uxui/caffeine92/aboutus.html
+++ b/pages/uxui/caffeine92/aboutus.html
@@ -5,6 +5,11 @@
     <title>CAFFEINE92 - ABOUT US</title>
     <link href="../../../css/caffeine92.css" type="text/css" rel="stylesheet">
 <style>
+
+.content_wrapper{
+    height:860px;
+    }
+
 #select_5 a{
     color: rgb(179, 118, 5);
     border-bottom: 2px solid rgb(179, 118, 5);
@@ -27,6 +32,7 @@
 </head>
 
 <body>
+<div class="content_wrapper">
 <div class="caffeine92_wrapper">
     <nav>
         <div id="caffeine92_logo"><img src="../../../images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
@@ -59,6 +65,7 @@
     </div><!--right content ENDS-->
 
 </div><!--caffein92_wrapper ENDS-->
+</div><!--content_wrapper ENDS-->
 
 <footer>
     <ul class="float_l footer_nav">
