--- a/pages/uxui/caffeine92/members.html
+++ b/pages/uxui/caffeine92/members.html
@@ -58,6 +58,8 @@ form p a:hover{
             <li id="select_5"><a href="aboutus.html">About Us</a></li>
         </ul>
     </nav>
+
+<div class="content_wrapper">
     <div id="left_content">
         <h3 id="h3_ab">MEMBERS</h3>
         <form>
@@ -83,7 +85,7 @@ form p a:hover{
     </div><!--right content ENDS-->
 
 </div><!--caffein92_wrapper ENDS-->
-
+</div><!--content_wrapper ENDS-->
 <footer>
     <ul class="float_l footer_nav">
         <li><a href="url">Contact Us</a></li>
