--- a/pages/uxui/mpCuisine/contactus.html
+++ b/pages/uxui/mpCuisine/contactus.html
@@ -25,7 +25,7 @@
     #contact_info{
         background:url("../../../images/web_design/MaPa_Cuisine/utensil_background.jpg");
         width:50%;
-        height: 550px;
+        height: 100%;
         float: left;
     }
     #contact_info img{
@@ -35,7 +35,6 @@
 
 #contact_map{
         width:50%;
-        height: 400px;
         float: right;
     }
 
