--- a/pages/uxui/mpCuisine.html
+++ b/pages/uxui/mpCuisine.html
@@ -42,12 +42,12 @@
         #content_container{
             background-color:rgba(255,255,255,.5);
             width:50%;
-            height: 700px;
+            height: 800px;
             position:absolute;
         }
 
         #front_border{
-            border: 10px solid rgba(255,255,255,.5);
+            /*border: 10px solid rgba(255,255,255,.5);*/
             width:95.5%;
             height: 678px;
             position:absolute;
