--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,6 +58,7 @@
 <!--PROJECTS-->
     <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png" alt="Mira Mesa Car Meet"></a>
     <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png" alt="Janine Fernandez Business Card"></a>
+    <a class="trigger_popup_fricc_3"><img id="car_icon" src="../images/projects/cards/caffeine92_giftcard-icon.png" alt="Janine Fernandez Caffeine92 Gift Card"></a>
     <a href="projects/golf_course.html"><img id="car_icon" src="../images/projects/golf_course/LMGC-icon-small.png" alt=""></a>
     <a href="projects/coffee_infographics.html"><img id="car_icon" src="../images/projects/coffee_info/Coffee-inforgraph-icon-small.png" alt="Coffee Infographics"></a>
     <a href="projects/zodiac_sign.html"><img id="car_icon" src="../images/projects/zodiac_sign/zodiac-icon-small.png"alt="Zodiac Sign Personality"></a>
@@ -87,6 +88,19 @@
             <div class="popupCloseButton">X</div>
         </div>
     </div>
+<!--Caffeine92 Gift Card Design-->
+<div class="hover_bkgr_fricc_3">
+        <span class="helper"></span>
+        <div>
+            <div id="header_contact">Caffeine92 Gift Card Designs</div>
+            <div id="slide_1">
+                <img class="car_ads" src="../images/projects/cards/caffeine92-giftcard.jpg" alt="Janine Fernandez Caffeine92 Gift Card Design">
+                <div class="_link"><a href="uxui/caffeine92.html" target="_blank">Caffeine92 Website</a></div>
+            </div><!--slide_1 ENDS-->
+            <div class="popupCloseButton">X</div>
+        </div>
+    </div>
+    <!--POP UP ENDS-->
 </div><!--container ends-->
 </div><!--gridwrapper ends-->
 </div><!--bodywrapper ends-->
