--- a/pages/uxui/caffeine92.html
+++ b/pages/uxui/caffeine92.html
@@ -9,6 +9,8 @@
     
     <!--Stylesheet-->
     <link href="../../css/caffeine92.css" type="text/css" rel="stylesheet">
+    <script src="../../js/nav_dropdown.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 <style>
 
@@ -25,11 +27,28 @@
     width:100%;
 }
 
+#c92_home{
+    background-color:rgba(255, 210, 64,.3);
+}
 </style>
 
 </head>
 <body>
 <div class="caffeine92_wrapper">
+
+<!--NAV MOBILE VIEW-->
+
+<div class="dropdown">
+<button onclick="myFunction()" class="dropbtn"><i class="fa fa-bars"></i></button>
+  <div id="myDropdown" class="dropdown-content">
+        <li id = "c92_home"><a href="caffeine92.html">Home</a></li>
+        <li id = "c92_drinks"><a href="caffeine92/drinks.html">Drinks</a></li>
+        <li id = "c92_snacks"><a href="caffeine92/snacks.html">Snacks</a></li>
+        <li id = "c92_members"><a href="caffeine92/members.html">Members</a></li>
+        <li id = "c92_about_us"><a href="caffeine92/aboutus.html">About Us</a></li>
+  </div>
+</div>
+<!--NAV MOBILE VIEW ENDS-->
 <nav>
     <div id="caffeine92_logo"><img src="../../images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
     <ul class="float_l nav1">
@@ -46,7 +65,7 @@
     <div id="left_content">
         <h1>Caffeine within seconds.</h1>
         <h3 id="h3_top">The fastest, best quality coffee in your hands.</h3>
-        <p>Add content text here. Add content text here. Add content text here. Add content text here. Add content text here. Add content text here.Add content text here. Add content text here. Add content text here.Add content text here. </p>
+        <p>You can not get coffee any faster with the least amount of movement. Enjoy our variety of delicious coffee while staying in your car. All you need to do is order and within minutes your coffee is ready. By the time you know it, you will be on your way!</p>
         <div id="left_content_icons">
             <h3 id="h3_bot">Fastest coffee drive thru.</h3>
             <img src="../../images/web_design/Caffeine92/deliver-icon.jpg" alt="Deliver Icons">
