--- a/pages/uxui/caffeine92/aboutus.html
+++ b/pages/uxui/caffeine92/aboutus.html
@@ -4,6 +4,8 @@
 <head>
     <title>CAFFEINE92 - ABOUT US</title>
     <link href="../../../css/caffeine92.css" type="text/css" rel="stylesheet">
+    <script src="../../../js/nav_dropdown.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 
 .content_wrapper{
@@ -34,6 +36,21 @@
 <body>
 <div class="content_wrapper">
 <div class="caffeine92_wrapper">
+
+<!--NAV MOBILE VIEW-->
+
+<div class="dropdown">
+<button onclick="myFunction()" class="dropbtn"><i class="fa fa-bars"></i></button>
+  <div id="myDropdown" class="dropdown-content">
+        <li id = "c92_home"><a href="../caffeine92.html">Home</a></li>
+        <li id = "c92_drinks"><a href="caffeine92/drinks.html">Drinks</a></li>
+        <li id = "c92_snacks"><a href="caffeine92/snacks.html">Snacks</a></li>
+        <li id = "c92_members"><a href="caffeine92/members.html">Members</a></li>
+        <li id = "c92_about_us"><a href="caffeine92/aboutus.html">About Us</a></li>
+  </div>
+</div>
+<!--NAV MOBILE VIEW ENDS-->
+
     <nav>
         <div id="caffeine92_logo"><img src="../../../images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
         <ul class="float_l nav1">
@@ -48,7 +65,7 @@
     </nav>
     <div id="left_content">
         <h3 id="h3_ab">ABOUT US</h3>
-        <p>Add content text here. Add content text here. Add content text here. Add content text here. Add content text here. Add content text here.Add content text here. Add content text here. Add content text here.Add content text here. </p>
+        <p>Caffeine92 originated in the heart of Mira Mesa. In a matter of minutes you will be in and out. Come visit us today, turning your car and leaving your seat not necessary.</p>
         <h3 style="color:rgb(179, 118, 5); padding-bottom:1em;">VISIT US TODAY!</h3>
         <h3>LOCATION</h3>
         <p>900 Mira Mesa Blvd Suite 9</p>
