--- a/pages/uxui/caffeine92/snacks.html
+++ b/pages/uxui/caffeine92/snacks.html
@@ -5,6 +5,8 @@
     <title>CAFFEINE92 - Snacks</title>
     <link href="../../../css/caffeine92.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="../../../js/nav_dropdown.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 #select_3 a{
     color: rgb(179, 118, 5);
@@ -30,6 +32,21 @@
 
 <body>
 <div class="caffeine92_wrapper">
+
+<!--NAV MOBILE VIEW-->
+
+<div class="dropdown">
+<button onclick="myFunction()" class="dropbtn"><i class="fa fa-bars"></i></button>
+  <div id="myDropdown" class="dropdown-content">
+        <li id = "c92_home"><a href="../caffeine92.html">Home</a></li>
+        <li id = "c92_drinks"><a href="caffeine92/drinks.html">Drinks</a></li>
+        <li id = "c92_snacks"><a href="caffeine92/snacks.html">Snacks</a></li>
+        <li id = "c92_members"><a href="caffeine92/members.html">Members</a></li>
+        <li id = "c92_about_us"><a href="caffeine92/aboutus.html">About Us</a></li>
+  </div>
+</div>
+<!--NAV MOBILE VIEW ENDS-->
+
     <nav>
         <div id="caffeine92_logo"><img src="../../../images/logo/caffeine-small-icon.png" alt="Caffeine92 Logo"></div>
         <ul class="float_l nav1">
