--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -82,6 +82,7 @@
 <!--PROJECTS ICON-->
     <a href="uxui/caffeine92.html" target="_blank"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
     <a href="uxui/mpCuisine.html" target="_blank"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
+    <a href="uxui/HarryPotter/wizards_and_witches.html" target="_blank"><img id="car_icon" src="uxui/HarryPotter/resource/hp_logo.png" alt="Witches and Wizards Logo"></a>
 
 
 </div><!--project container ends-->
