--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <li id = "projects"><a href="pages/projects.html">Projects</a></li>
             <li id = "logo"><a href="pages/logo.html">Logo</a></li>
             <li id = "type"><a href="pages/type.html">Type</a></li>
-            <!--<li id = "Creative9"><a href="https://janinebfernandez.github.io/Creative9/index.html">Creative9</a></li>-->
+            <li id = "CREATIVE9"><a href="https://janinebfernandez.github.io/Creative9/index.html">Creative9</a></li>
             <!--<li id = "animate"><a href="url">Animate</a></li>-->
             <!--<li id = "sound"><a href="url">Sound</a></li>-->
         </div><!--dropdown ends-->
