--- a/pages/logo.html
+++ b/pages/logo.html
@@ -101,6 +101,7 @@
             <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><a href="logo.html">Logo</a></li>
             <li id = "type"><a href="type.html">Type</a></li>
+            <li id = "CREATIVE9"><a href="https://janinebfernandez.github.io/Creative9/index.html">Creative9</a></li>
             <li id = "animate"><!--<a href="url">Animate&Sound</a>--></li>
             <li id = "sound"><!--<a href="url">BTS</a>--></li>
         </ul><!--dropdown ends-->
