--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                       
                 <div class = "gridwrapper_info">
-                    <div class="box mytitle">designer & developer - Project Manager
+                    <div class="box mytitle">designer & developer
                         </div>
                     <div class="box myname">Janine B. Fernandez
                         </div>
