--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -82,7 +82,7 @@
 <!--PROJECTS ICON-->
     <a href="uxui/caffeine92.html" target="_blank"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
     <a href="uxui/mpCuisine.html" target="_blank"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
-    <a href="uxui/HarryPotter/wizards_and_witches.html" target="_blank"><img id="car_icon" src="uxui/HarryPotter/resource/hp_logo.png" alt="Witches and Wizards Logo"></a>
+    <a href="https://janinebfernandez.github.io/WAW/wizards_and_witches.html" target="_blank"><img id="car_icon" src="uxui/HarryPotter/resource/hp_logo.png" alt="Witches and Wizards Logo"></a>
 
 
 </div><!--project container ends-->
@@ -102,7 +102,7 @@
             <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><a href="logo.html">Logo</a></li>
             <li id = "type"><a href="type.html">Type</a></li>
-            <li id = "CREATIVE9"><a href="https://janinebfernandez.github.io/Creative9/index.html">Creative9</a></li>
+            <li id = "CREATIVE9"><a href="https://janinebfernandez.github.io/Creative9/index.html" target="_blank">Creative9</a></li>
             <li id = "animate"><!--<a href="url">Animate&Sound</a>--></li>
             <li id = "sound"><!--<a href="url">BTS</a>--></li>
         </ul><!--dropdown ends-->
