--- a/pages/projects.html
+++ b/pages/projects.html
@@ -59,8 +59,8 @@
     <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png" alt="Mira Mesa Car Meet"></a>
     <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png" alt="Janine Fernandez Business Card"></a>
     <a class="trigger_popup_fricc_3"><img id="car_icon" src="../images/projects/cards/caffeine92_giftcard-icon.png" alt="Janine Fernandez Caffeine92 Gift Card"></a>
-    <a href="projects/golf_course.html"><img id="car_icon" src="../images/projects/golf_course/LMGC-icon-small.png" alt=""></a>
-    <a href="projects/coffee_infographics.html"><img id="car_icon" src="../images/projects/coffee_info/Coffee-inforgraph-icon-small.png" alt="Coffee Infographics"></a>
+    <a href="../../Projects/LMGC/golf_course.html"><img id="car_icon" src="../images/projects/golf_course/LMGC-icon-small.png" alt=""></a>
+    <a href="../../Projects/Coffee_Infographics/coffee_infographics.html"><img id="car_icon" src="../images/projects/coffee_info/Coffee-inforgraph-icon-small.png" alt="Coffee Infographics"></a>
     <a href="projects/zodiac_sign.html"><img id="car_icon" src="../images/projects/zodiac_sign/zodiac-icon-small.png"alt="Zodiac Sign Personality"></a>
 <!--POP UP-->
 <!--Car_Meet Pop up-->
