--- a/pages/projects.html
+++ b/pages/projects.html
@@ -95,7 +95,7 @@
             <div id="header_contact">Caffeine92 Gift Card Designs</div>
             <div id="slide_1">
                 <img class="car_ads" src="../images/projects/cards/caffeine92-giftcard.jpg" alt="Janine Fernandez Caffeine92 Gift Card Design">
-                <div class="_link"><a href="uxui/caffeine92.html" target="_blank">Caffeine92 Website</a></div>
+                <div class="_link"><a href="../../WebDesign/Caffeine92/caffeine92.html" target="_blank">Caffeine92 Website</a></div>
             </div><!--slide_1 ENDS-->
             <div class="popupCloseButton">X</div>
         </div>
