--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -80,8 +80,8 @@
 <h2 class="page_title">Web Design</h2>
 <div class="project_container">
 <!--PROJECTS ICON-->
-    <a href="../../WebDesign/Caffeine92/caffeine92.html" target="_blank"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
-    <a href="../../WebDesign/MaPaCuisine/mpCuisine.html" target="_blank"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
+    <a href="https://janinebfernandez.github.io/Caffeine92/caffeine92.html" target="_blank"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
+    <a href="https://janinebfernandez.github.io/MapaCuisine/mpCuisine.html" target="_blank"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
     <a href="https://janinebfernandez.github.io/WAW/wizards_and_witches.html" target="_blank"><img id="car_icon" src="../images/web_design/hp_logo.png" alt="Witches and Wizards Logo"></a>
 
 
