UXUI section added

--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -55,6 +55,13 @@
 .custom_link a:hover{
     color:red;
 }
+
+.sq_thumb{
+    width: 120px;
+    height: auto;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
 </style>
 </head>
 
@@ -80,9 +87,24 @@
 <h2 class="page_title">Web Design</h2>
 <div class="project_container">
 <!--PROJECTS ICON-->
-    <a href="https://janinebfernandez.github.io/Caffeine92/caffeine92.html" target="_blank"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
-    <a href="https://janinebfernandez.github.io/MapaCuisine/mpCuisine.html" target="_blank"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
+    <a href="uxui/caffeine92.html" target="_blank"><img id="car_icon" src="../images/logo/caffeine-small-icon.png" alt="Caffeine92 Coffee Shop Logo"></a>
+    <a href="uxui/mpCuisine.html" target="_blank"><img id="car_icon" src="../images/logo/mapa-cuisine-small-icon.png" alt="MaPa Cuisine Logo"></a>
     <a href="https://janinebfernandez.github.io/WAW/wizards_and_witches.html" target="_blank"><img id="car_icon" src="../images/web_design/hp_logo.png" alt="Witches and Wizards Logo"></a>
+
+<br>
+<br>
+<br>
+<h2 class="page_title">UXUI Design</h2>
+<!--UXUI Preview BEGINS-->
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/SD.jpg" alt="Caffeine92 Coffee Shop Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/LaTours.jpg" alt="MaPa Cuisine Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/JoyBF.jpg" alt="Witches and Wizards Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/Shutterflies.jpg" alt="Witches and Wizards Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/CK.jpg" alt="Witches and Wizards Logo"></a>
+<!--UXUI Preview ENDS-->
+
+
+
 
 
 </div><!--project container ends-->
