--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -96,11 +96,11 @@
 <br>
 <h2 class="page_title">UXUI Design</h2>
 <!--UXUI Preview BEGINS-->
-<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/SD.jpg" alt="Caffeine92 Coffee Shop Logo"></a>
-<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/LaTours.jpg" alt="MaPa Cuisine Logo"></a>
-<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/JoyBF.jpg" alt="Witches and Wizards Logo"></a>
-<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/Shutterflies.jpg" alt="Witches and Wizards Logo"></a>
-<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../WebDesign/UXUI/designs/CK.jpg" alt="Witches and Wizards Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../UXUI/designs/SD.jpg" alt="Caffeine92 Coffee Shop Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../UXUI/designs/LaTours.jpg" alt="MaPa Cuisine Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../UXUI/designs/JoyBF.jpg" alt="Witches and Wizards Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../UXUI/designs/Shutterflies.jpg" alt="Witches and Wizards Logo"></a>
+<a href="https://janinebfernandez.github.io/UXUI/uxui.html"><img class="sq_thumb" src="../../UXUI/designs/CK.jpg" alt="Witches and Wizards Logo"></a>
 <!--UXUI Preview ENDS-->
 
 
