--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
         <div id="myDropdown" class="dropdown-content">
             <!--<li id = "video"><a href="url">Video</a></li>-->
-            <li id = "photo"><a href="pages/photography.html">Photography</a></li>
+            <li id = "photo"><a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a></li>
             <li id = "wd"><a href="pages/webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="pages/graphics.html">Graphics</a></li>
             <li id = "projects"><a href="pages/projects.html">Projects</a></li>
