--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -118,7 +118,7 @@
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
         <ul id="myDropdown" class="dropdown-content child">
             <li id = "video"><!--<a href="url">Video</a>--></li>
-            <li id = "photo"><a href="photography.html">Photography</a></li>
+            <li id = "photo"><a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a></li>
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><a href="projects.html">Projects</a></li>
