--- a/pages/projects.html
+++ b/pages/projects.html
@@ -59,8 +59,8 @@
     <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png" alt="Mira Mesa Car Meet"></a>
     <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png" alt="Janine Fernandez Business Card"></a>
     <a class="trigger_popup_fricc_3"><img id="car_icon" src="../images/projects/cards/caffeine92_giftcard-icon.png" alt="Janine Fernandez Caffeine92 Gift Card"></a>
-    <a href="https://janinebfernandez.github.io/LMGC/golf_course.html"><img id="car_icon" src="../../Projects/LMGC/images/LMGC-icon-small.png" alt="LMGC"></a>
-    <a href="https://janinebfernandez.github.io/Coffee_Infographics/coffee_infographics.html"><img id="car_icon" src="../../Projects/Coffee_Infographics/images/coffee_info/whitemocha-mid.png" alt="Coffee Infographics"></a>
+    <a href="https://janinebfernandez.github.io/LMGC/golf_course.html"><img id="car_icon" src="https://raw.githubusercontent.com/janinebfernandez/LMGC/master/images/LMGC-icon-small.png" alt="LMGC"></a>
+    <a href="https://janinebfernandez.github.io/Coffee_Infographics/coffee_infographics.html"><img id="car_icon" src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/Coffee-inforgraph-icon-small.png" alt="Coffee Infographics"></a>
     <a href="projects/zodiac_sign.html"><img id="car_icon" src="../images/projects/zodiac_sign/zodiac-icon-small.png"alt="Zodiac Sign Personality"></a><!--POP UP-->
 <!--Car_Meet Pop up-->
 <div class="hover_bkgr_fricc">
